# rust-rest-boilerplate

./: Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yaml
config/: application-dev.yml  application-docker-compose.yml  application-docker.yml  application-prod.yml  application.yml  log4rs.yaml
migrations/2019-07-12-191444_users/: up.sql
src/: bootstrap.rs  config.rs  database.rs  lib.rs  logging.rs  routes.rs  schema.rs
src/handler/: health.rs  mod.rs  user_handlers.rs  utils.rs
src/model/: errors.rs  user.rs
src/repository/: user_repository.rs
src/service/: user_service.rs
